# firmware-V1

./: Cargo.toml  README.md  arducopter.apj  arducopter.elf  build.rs  features.txt  firmware-version.txt  git-version.txt  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
docs/: baro-spl06.md  compass-cal.md  ekf.md  esc-motors.md  gps-compass.md  mavlink-telemetry.md  mtf01-elrs.md  proximity-tfluna.md  sensor-fusion.md
message_definitions/: scky.xml
src/: ahrs.rs  baro.rs  compass.rs  crsf.rs  dshot.rs  ekf.rs  esc.rs  esc_telem.rs  estimator.rs  filters.rs  gps.rs  imu.rs  main.rs  mavlink.rs  mtf01.rs  nav.rs  tfluna.rs
tests/: lidar-debug.py
